# memento-team

./: .env  .gitignore  CLAUDE.md  README.md  cli_entry.py  example_task.json  install.sh  main.py  orchestrator_agent_to_merge.py  plan.md  pyproject.toml  skills-lock.json  tui_app.py
Memento-S/: AGENTS.md  CLAUDE.md  README.md  agent.py  difference.md  install.sh  mcp_server.py  pyproject.toml  requirements.txt
Memento-S/cli/: __main__.py  main.py  skill_search.py  workflow_runner.py
Memento-S/core/: ARCHITECTURE.md  __init__.py  config.py  llm.py  mcp_agent.py  mcp_client.py  mcp_server.py  router.py  workboard.py
Memento-S/core/agent/: memento_s_agent.py
Memento-S/core/config/: config.py  logging.py
Memento-S/core/skill_engine/: __init__.py  create_on_miss.py  execution.py  planning.py  skill_catalog.py  skill_executor.py  skill_resolver.py  skill_runner.py  skill_utils.py  summarization.py
Memento-S/core/tools/: builtins.py
Memento-S/core/utils/: __init__.py  json_utils.py  logging_utils.py
Memento-S/skills/filesystem/: SKILL.md
Memento-S/skills/serpapi/: SKILL.md
Memento-S/skills/skill-creator/: SKILL.md
Memento-S/skills/terminal/: SKILL.md
Memento-S/tests/: test_mcp_agent.py  test_mcp_servers.py
Memento-S/workspace/: .workboard-20260217T152932Z.md  .workboard-20260217T153341Z.md  .workboard-20260217T154520Z.md  .workboard-20260217T155151Z.md  .workboard-20260217T155549Z.md  .workboard-20260217T160712Z.md  .workboard-20260217T162438Z.md  .workboard-20260217T165251Z.md  .workboard-20260217T170518Z.md  .workboard-20260217T171624Z.md  .workboard-20260217T172812Z.md  .workboard-20260217T173405Z.md  .workboard-20260217T173948Z.md  .workboard-20260217T174322Z.md  .workboard-20260217T175025Z.md  .workboard-20260217T175817Z.md  .workboard-20260217T180143Z.md  .workboard-20260217T181015Z.md  .workboard-20260217T181342Z.md  .workboard-20260217T181445Z.md  .workboard-20260217T182136Z.md  .workboard-20260217T182554Z.md  .workboard-20260217T182843Z.md  .workboard-20260217T183213Z.md  .workboard-20260217T183414Z.md  .workboard-20260217T183836Z.md  .workboard-20260217T183952Z.md  .workboard-20260217T184723Z.md  .workboard-20260217T185125Z.md  .workboard-20260217T185308Z.md  .workboard.md
Memento_S/: .gitignore  agent.py  (+4 more)
(+121 files in other folders)
