[project]
name = "memento-teams"
version = "0.1.0"
description = "Memento-Teams: Multi-agent orchestrator with TUI"
requires-python = ">=3.12"
dependencies = [
    "textual",
    "rich",
    "python-dotenv",
    "langchain-openai",
    "langchain",
    "langchain-core",
    "langchain-mcp-adapters",
    "langgraph",
    "fastmcp",
    "httpx",
    "aiohttp",
    "aiofiles",
    "anyio",
    "litellm",
    "tiktoken",
    "pyyaml",
    "google_search_results",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]
include = [
    "main.py",
    "tui_app.py",
]
